// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workspace just a,b,c,d,e packages create workspace: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "b",
        "c",
      ],
      "folder": "a",
      "layer": "",
      "name": "a",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "c",
        "d",
      ],
      "folder": "b",
      "layer": "",
      "name": "b",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "d",
      ],
      "folder": "c",
      "layer": "",
      "name": "c",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "e",
      ],
      "folder": "d",
      "layer": "",
      "name": "d",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "e",
      "layer": "",
      "name": "e",
    },
  ],
}
`;

exports[`workspace just a,b,c,d,e packages create workspace: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages findBundler workspace: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages findPackage workspace: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk workspace all: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace all: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE(e walkABCDE)",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter a: logged 1`] = `
Array [
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter a: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter b: logged 1`] = `
Array [
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter b: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter c,d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter c,d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter c: logged 1`] = `
Array [
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter c: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter d: logged 1`] = `
Array [
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter d: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter e: logged 1`] = `
Array [
  "creating job [e walkABCDE]",
  "creating job [d walkABCDE]",
  "creating job [c walkABCDE]",
  "creating job [b walkABCDE]",
  "creating job [a walkABCDE]",
]
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter e: walkedDebug 1`] = `
Object {
  "a": Array [
    "a walkABCDE(b walkABCDE,c walkABCDE)",
  ],
  "b": Array [
    "b walkABCDE(c walkABCDE,d walkABCDE)",
  ],
  "c": Array [
    "c walkABCDE(d walkABCDE)",
  ],
  "d": Array [
    "d walkABCDE(e walkABCDE)",
  ],
  "e": Array [
    "e walkABCDE()",
  ],
}
`;

exports[`workspace just a,b,c,d,e packages walk workspace filter none: logged 1`] = `Array []`;

exports[`workspace just a,b,c,d,e packages walk workspace filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just one package create: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "x",
      "layer": "",
      "name": "x",
    },
  ],
}
`;

exports[`workspace just one package create: logged 1`] = `Array []`;

exports[`workspace just one package findBundler: logged 1`] = `Array []`;

exports[`workspace just one package findPackage: logged 1`] = `Array []`;

exports[`workspace just one package walk one job per package all: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk one job per package all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk one job per package filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk one job per package filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just one package walk one job per package filter x: logged 1`] = `
Array [
  "creating job [x walk]",
]
`;

exports[`workspace just one package walk one job per package filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walk()",
  ],
}
`;

exports[`workspace just one package walk two jobs per package all: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk two jobs per package all: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk two jobs per package all: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just one package walk two jobs per package filter none: logged 1`] = `Array []`;

exports[`workspace just one package walk two jobs per package filter none: walked1Debug 1`] = `Object {}`;

exports[`workspace just one package walk two jobs per package filter none: walked2Debug 1`] = `Object {}`;

exports[`workspace just one package walk two jobs per package filter x: logged 1`] = `
Array [
  "creating job [x walk1]",
  "creating job [x walk2]",
]
`;

exports[`workspace just one package walk two jobs per package filter x: walked1Debug 1`] = `
Object {
  "x": Array [
    "x walk1()",
  ],
}
`;

exports[`workspace just one package walk two jobs per package filter x: walked2Debug 1`] = `
Object {
  "x": Array [
    "x walk2()",
  ],
}
`;

exports[`workspace just x,y packages create workspace: layers/pkg 1`] = `
Object {
  "layers": Array [],
  "pkgs": Array [
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [
        "y",
      ],
      "folder": "x",
      "layer": "",
      "name": "x",
    },
    Object {
      "bundlers": Array [
        "fakeBundlerNPM",
      ],
      "dependencies": Array [],
      "folder": "y",
      "layer": "",
      "name": "y",
    },
  ],
}
`;

exports[`workspace just x,y packages create workspace: logged 1`] = `Array []`;

exports[`workspace just x,y packages findBundler workspace: logged 1`] = `Array []`;

exports[`workspace just x,y packages findPackage workspace: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk workspace all: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk workspace all: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY(y walkXY)",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk workspace filter none: logged 1`] = `Array []`;

exports[`workspace just x,y packages walk workspace filter none: walkedDebug 1`] = `Object {}`;

exports[`workspace just x,y packages walk workspace filter x: logged 1`] = `
Array [
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk workspace filter x: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY()",
  ],
}
`;

exports[`workspace just x,y packages walk workspace filter y: logged 1`] = `
Array [
  "creating job [y walkXY]",
  "creating job [x walkXY]",
]
`;

exports[`workspace just x,y packages walk workspace filter y: walkedDebug 1`] = `
Object {
  "x": Array [
    "x walkXY(y walkXY)",
  ],
  "y": Array [
    "y walkXY()",
  ],
}
`;
